--- a/frontend/src/ui/layout/Sidebar.css
+++ b/frontend/src/ui/layout/Sidebar.css
@@ -270,7 +270,9 @@
 .sidebar-resizer {
   width: 4px;
   background-color: var(--color-bg-secondary);
-  cursor: url('../../assets/cursors/ew-resize.svg') 12 12, col-resize;
+  cursor:
+    url("../../assets/cursors/ew-resize.svg") 12 12,
+    col-resize;
   position: relative;
   /* border-right: 1px solid var(--color-border); */
   transition: background-color var(--transition-fast);
@@ -288,7 +290,9 @@
 /* Body cursor override during sidebar resize */
 body.sidebar-resizing,
 body.sidebar-resizing * {
-  cursor: url('../../assets/cursors/ew-resize.svg') 12 12, col-resize !important;
+  cursor:
+    url("../../assets/cursors/ew-resize.svg") 12 12,
+    col-resize !important;
   user-select: none !important;
 }
 
